# cspace-search

./: .gitignore  Cargo.toml  LICENSE  PORTING.md  README.md
.cspace/context/decisions/: 2026-04-24-mcp-single-search-tool.md  2026-04-24-status-stale-deferred.md  2026-04-24-vector-store-sqlite-vec.md
.github/workflows/: ci.yml
docs/: index.md  package.json  pnpm-lock.yaml
docs/.vitepress/: config.mts
docs/architecture/: what-happens-during-a-search.md
docs/guide/: configuration.md  installation.md  quickstart.md
src/: main.rs
src/commands/: clusters.rs  init.rs  mcp.rs  mod.rs  search.rs  status.rs
src/config/: default.yaml  mod.rs  runtime.rs
src/corpus/: chunker.rs  code.rs  commits.rs  context.rs  file.rs  filter.rs  mod.rs  registry.rs
src/embed/: cache.rs  llama.rs  mod.rs  ort.rs
src/index/: mod.rs  sqlite.rs
src/query/: mod.rs
src/util/: mod.rs
