[package]
name = "cspace-search"
version = "0.1.0"
edition = "2021"
description = "Local-first semantic search for commits, code, and project context."
repository = "https://github.com/elliottregan/cspace-search"
license = "PolyForm-Perimeter-1.0.0"
readme = "README.md"

# Strip and LTO for release; fast iteration in dev.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "cargo"] }

# Config + serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
anyhow = "1"
thiserror = "2"

# Async runtime (required for candle + rmcp + http)
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Hashing (Record::id, project_hash)
sha2 = "0.10"
hex = "0.4"

# Glob matching for the code corpus's Filter excludes.
glob = "0.3"

# Vector store. rusqlite bundles sqlite3 so users don't need a system
# install; sqlite-vec adds the vec0 virtual-table kNN extension, loaded
# from a statically-linked C library via its init function.
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"
zerocopy = "0.7"

# Embedding inference via llama.cpp. Reads GGUF natively — same file
# the Go version used (`v5-nano-retrieval-Q8_0.gguf` from HF). CGO-ish
# build (llama-cpp-sys-2 vendors + builds the llama.cpp C++ source),
# but vendored means no external CDN and no runtime dylib. hf-hub
# lazily downloads + caches the GGUF on first use.
llama-cpp-2 = "0.1"
hf-hub = { version = "0.5", default-features = false, features = ["ureq"] }

[dev-dependencies]
tempfile = "3"
